--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "preprocess.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPFclhseXLc/B6N/4LU1VWz",
+      "authorship_tag": "ABX9TyPqUREIcd+injBRo5ufQM31",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "InlWwhe7Hqn4",
-        "outputId": "adac033e-edf5-4682-e203-385cb8ec8f66"
+        "outputId": "7de9037a-b896-4554-d7d5-82574b6fe10c"
       },
       "source": [
         "!pip install transformers"
@@ -58,27 +58,27 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.7/dist-packages (4.12.3)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.2)\n",
             "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
+            "Requirement already satisfied: tokenizers<0.11,>=0.10.1 in /usr/local/lib/python3.7/dist-packages (from transformers) (0.10.3)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.19.5)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.8.2)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (0.1.2)\n",
+            "Requirement already satisfied: sacremoses in /usr/local/lib/python3.7/dist-packages (from transformers) (0.0.46)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.62.3)\n",
             "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.7/dist-packages (from transformers) (6.0)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.3.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (0.1.2)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.19.5)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.62.3)\n",
-            "Requirement already satisfied: tokenizers<0.11,>=0.10.1 in /usr/local/lib/python3.7/dist-packages (from transformers) (0.10.3)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.2)\n",
-            "Requirement already satisfied: sacremoses in /usr/local/lib/python3.7/dist-packages (from transformers) (0.0.46)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.8.2)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (3.10.0.2)\n",
             "Requirement already satisfied: pyparsing<3,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=20.0->transformers) (2.4.7)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->transformers) (3.6.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2021.10.8)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.15.0)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (7.1.2)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.1.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.15.0)\n"
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.1.0)\n"
           ]
         }
       ]
@@ -114,7 +114,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rVXsuVnfIgfX",
-        "outputId": "7ceb2cd2-a328-4c26-a700-b382e45f6a0e"
+        "outputId": "c346e89a-270c-425c-8ff0-fa35e2a61349"
       },
       "source": [
         "from google.colab import drive\n",
@@ -149,10 +149,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 108
+          "height": 90
         },
         "id": "QdJq2a98JzzU",
-        "outputId": "0e8c513e-2587-4f7c-960b-69ebd6bd2ced"
+        "outputId": "a5df6739-8794-4491-f760-7fa0f74260c1"
       },
       "source": [
         "#uncomment if you did not download the data\n",
@@ -215,7 +215,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OcbL62xRM2dU",
-        "outputId": "ef34aa12-eee5-4127-938d-ee3d3fa6fd8f"
+        "outputId": "8f611b4b-73ec-4504-cc30-c3f45b2db4b1"
       },
       "source": [
         "##DATA TREE AND TYPE##\n",
@@ -320,7 +320,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS7kUgcJZ34r",
-        "outputId": "6e292601-c32a-4553-b0b6-58d14b700d50"
+        "outputId": "40c5db23-0802-441d-962a-9bf92d70dc05"
       },
       "source": [
         "total_error = train_span_error + val_span_error + test_span_error\n",
@@ -371,9 +371,9 @@
         "model_name = \"aubmindlab/bert-base-arabertv02\"\n",
         "arabert_tokenizer = AutoTokenizer.from_pretrained(model_name,do_lower_case=False)\n",
         "\n",
-        "train_encodings = arabert_tokenizer(train_contexts, train_questions, truncation=True, padding=True)\n",
-        "val_encodings = arabert_tokenizer(val_contexts, val_questions, truncation=True, padding=True)\n",
-        "test_encodings = arabert_tokenizer(test_contexts,test_questions, truncation= True, padding= True)"
+        "train_encodings = arabert_tokenizer(train_contexts, train_questions, truncation=True, padding=True, return_tensors=\"tf\")\n",
+        "val_encodings = arabert_tokenizer(val_contexts, val_questions, truncation=True, padding=True, return_tensors=\"tf\")\n",
+        "test_encodings = arabert_tokenizer(test_contexts,test_questions, truncation= True, padding= True, return_tensors=\"tf\")"
       ],
       "execution_count": 12,
       "outputs": []
@@ -430,61 +430,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pIzP7mZxlt0w",
-        "outputId": "d52537f4-0989-49ea-d518-b92776ed1003"
-      },
-      "source": [
-        "train_encodings.keys()"
-      ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "dict_keys(['input_ids', 'token_type_ids', 'attention_mask'])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e8bYM9g6o-zL",
-        "outputId": "0987297d-0a72-4c05-b52d-2d48b357f152"
+        "id": "e8bYM9g6o-zL"
       },
       "source": [
         "def if_any_truncated(positions, max_token = arabert_tokenizer.model_max_length):\n",
-        "  cnt = 0\n",
-        "  for pos in positions:\n",
-        "    if pos == max_token:\n",
-        "      cnt = cnt + 1\n",
-        "  return cnt\n",
-        "print(if_any_truncated(train_start_pos))\n",
-        "print(if_any_truncated(val_start_pos))\n",
-        "print(if_any_truncated(test_start_pos))"
+        "  return np.sum(positions == max_token)"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "20\n",
-            "0\n",
-            "3\n"
-          ]
-        }
-      ]
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -509,7 +462,7 @@
         "val_span = tf.transpose(val_span)\n",
         "test_span = tf.transpose(test_span)"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -519,10 +472,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_vrMP6kgyqVi",
-        "outputId": "0b433f90-457e-4c0b-c1cf-074b22e61bb6"
+        "outputId": "136c25f6-215a-4698-b93a-b4969720772c"
       },
       "source": [
         "print(train_span.shape)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(12595, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4tNa-Wp6qznU",
+        "outputId": "faf63d82-bb4d-4362-941c-12aa97dd5b03"
+      },
+      "source": [
+        "print(if_any_truncated(train_span[:,0]))\n",
+        "print(if_any_truncated(val_span[:0]))\n",
+        "print(if_any_truncated(test_span[:,0]))"
       ],
       "execution_count": 18,
       "outputs": [
@@ -530,7 +508,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(12595, 2)\n"
+            "20\n",
+            "0\n",
+            "3\n"
           ]
         }
       ]
