Add the arabert preprocess function

--- a/.ipynb_aml_checkpoints/AraBERT_Base-checkpoint2022-1-22-17-18-23Z.ipynb
+++ b/.ipynb_aml_checkpoints/AraBERT_Base-checkpoint2022-1-22-17-18-23Z.ipynb
@@ -33,7 +33,7 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Requirement already satisfied: transformers in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (4.5.1)\nRequirement already satisfied: filelock in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (3.4.1)\nRequirement already satisfied: sacremoses in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (0.0.47)\nRequirement already satisfied: tokenizers<0.11,>=0.10.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (0.10.3)\nRequirement already satisfied: packaging in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (21.3)\nRequirement already satisfied: dataclasses; python_version < \"3.7\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (0.6)\nRequirement already satisfied: regex!=2019.12.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (2022.1.18)\nRequirement already satisfied: tqdm>=4.27 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (4.62.3)\nRequirement already satisfied: importlib-metadata; python_version < \"3.8\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (4.8.3)\nRequirement already satisfied: requests in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (2.27.1)\nRequirement already satisfied: numpy>=1.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (1.18.5)\nRequirement already satisfied: joblib in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from sacremoses->transformers) (0.14.1)\nRequirement already satisfied: click in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from sacremoses->transformers) (8.0.3)\nRequirement already satisfied: six in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from sacremoses->transformers) (1.16.0)\nRequirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from packaging->transformers) (3.0.6)\nRequirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from importlib-metadata; python_version < \"3.8\"->transformers) (4.0.1)\nRequirement already satisfied: zipp>=0.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from importlib-metadata; python_version < \"3.8\"->transformers) (3.6.0)\nRequirement already satisfied: charset-normalizer~=2.0.0; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (2.0.10)\nRequirement already satisfied: idna<4,>=2.5; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (3.3)\nRequirement already satisfied: certifi>=2017.4.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (2021.10.8)\nRequirement already satisfied: urllib3<1.27,>=1.21.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (1.26.7)\nRequirement already satisfied: pyarabic in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (0.6.14)\nRequirement already satisfied: six>=1.14.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from pyarabic) (1.16.0)\nRequirement already satisfied: farasapy in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (0.0.14)\nRequirement already satisfied: tqdm in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from farasapy) (4.62.3)\nRequirement already satisfied: requests in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from farasapy) (2.27.1)\nRequirement already satisfied: certifi>=2017.4.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (2021.10.8)\nRequirement already satisfied: charset-normalizer~=2.0.0; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (2.0.10)\nRequirement already satisfied: idna<4,>=2.5; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (3.3)\nRequirement already satisfied: urllib3<1.27,>=1.21.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (1.26.7)\n"
+          "text": "Requirement already satisfied: transformers in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (4.5.1)\nRequirement already satisfied: numpy>=1.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (1.18.5)\nRequirement already satisfied: tokenizers<0.11,>=0.10.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (0.10.3)\nRequirement already satisfied: regex!=2019.12.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (2022.1.18)\nRequirement already satisfied: requests in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (2.27.1)\nRequirement already satisfied: dataclasses; python_version < \"3.7\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (0.6)\nRequirement already satisfied: filelock in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (3.4.1)\nRequirement already satisfied: tqdm>=4.27 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (4.62.3)\nRequirement already satisfied: sacremoses in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (0.0.47)\nRequirement already satisfied: importlib-metadata; python_version < \"3.8\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (4.8.3)\nRequirement already satisfied: packaging in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from transformers) (21.3)\nRequirement already satisfied: idna<4,>=2.5; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (3.3)\nRequirement already satisfied: urllib3<1.27,>=1.21.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (1.26.7)\nRequirement already satisfied: certifi>=2017.4.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (2021.10.8)\nRequirement already satisfied: charset-normalizer~=2.0.0; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->transformers) (2.0.10)\nRequirement already satisfied: joblib in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from sacremoses->transformers) (0.14.1)\nRequirement already satisfied: six in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from sacremoses->transformers) (1.16.0)\nRequirement already satisfied: click in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from sacremoses->transformers) (8.0.3)\nRequirement already satisfied: zipp>=0.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from importlib-metadata; python_version < \"3.8\"->transformers) (3.6.0)\nRequirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from importlib-metadata; python_version < \"3.8\"->transformers) (4.0.1)\nRequirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from packaging->transformers) (3.0.6)\nCollecting pyarabic\n  Downloading PyArabic-0.6.14-py3-none-any.whl (126 kB)\n\u001b[K     |████████████████████████████████| 126 kB 24.1 MB/s eta 0:00:01\n\u001b[?25hRequirement already satisfied: six>=1.14.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from pyarabic) (1.16.0)\nInstalling collected packages: pyarabic\nSuccessfully installed pyarabic-0.6.14\nCollecting farasapy\n  Downloading farasapy-0.0.14-py3-none-any.whl (11 kB)\nRequirement already satisfied: tqdm in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from farasapy) (4.62.3)\nRequirement already satisfied: requests in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from farasapy) (2.27.1)\nRequirement already satisfied: urllib3<1.27,>=1.21.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (1.26.7)\nRequirement already satisfied: charset-normalizer~=2.0.0; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (2.0.10)\nRequirement already satisfied: certifi>=2017.4.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (2021.10.8)\nRequirement already satisfied: idna<4,>=2.5; python_version >= \"3\" in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->farasapy) (3.3)\nInstalling collected packages: farasapy\nSuccessfully installed farasapy-0.0.14\n"
         }
       ],
       "execution_count": 1,
@@ -57,20 +57,19 @@
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "from transformers import AutoModel , AutoTokenizer\n",
-        "from Preprocess.arabertpreprocess import ArabertPreprocessor\n",
         "torch.manual_seed(1)\n"
       ],
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 1,
+          "execution_count": 2,
           "data": {
-            "text/plain": "<torch._C.Generator at 0x7f2a4823d150>"
+            "text/plain": "<torch._C.Generator at 0x7f8784a819b0>"
           },
           "metadata": {}
         }
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "4se86D7wISz-",
         "colab": {
@@ -78,7 +77,7 @@
         },
         "outputId": "db113851-c93a-4a3d-b1a5-0d7c0b3ff61f",
         "gather": {
-          "logged": 1645551808204
+          "logged": 1645535186564
         }
       }
     },
@@ -189,26 +188,21 @@
         "  return True"
       ],
       "outputs": [],
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "TO4PKnxETihu",
-        "gather": {
-          "logged": 1645551821405
-        }
+        "id": "TO4PKnxETihu"
       }
     },
     {
       "cell_type": "code",
       "source": [
         "def arabert_preprocess(context, answer, arabert_prep):\r\n",
-        "    answer['text'] = arabert_prep.preprocess(answer['text'])\r\n",
-        "    context = arabert_prep.preprocess(context)\r\n",
-        "    res = context.find(answer['text'])\r\n",
-        "    answer['answer_start'] = res\r\n",
-        "    return context, answer, res"
+        "    answers[i]['text'] = arabert_prep.preprocess(answers[i]['text'])\r\n",
+        "    contexts[i] = arabert_prep.preprocess(contexts[i])\r\n",
+        "    answers[i]['answers_start'] = contexts[i].find(answers[i]['text'])"
       ],
       "outputs": [],
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -218,16 +212,13 @@
           "transient": {
             "deleting": false
           }
-        },
-        "gather": {
-          "logged": 1645551827169
         }
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "def Read_AAQAD(path,arabert_prep):\n",
+        "def Read_AAQAD(path):\n",
         "  contexts =[]\n",
         "  answers =[]\n",
         "  questions =[]\n",
@@ -247,10 +238,7 @@
         "            access = 'answers'\n",
         "            plausible.append(True)\n",
         "          for answer in qa[access]:\n",
-        "            context, answer, res =  arabert_preprocess(context, answer, arabert_prep)\n",
-        "            if res==-1:\n",
-        "              cnt+=1\n",
-        "              continue\n",
+        "            context, answer = \n",
         "            flag = add_end_index(answer, context) #if false dont add the \n",
         "            cnt =cnt + flag\n",
         "            if not flag:\n",
@@ -260,30 +248,22 @@
         "  return contexts,questions,answers,plausible,cnt"
       ],
       "outputs": [],
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "id": "_L_EeDReM-57",
-        "gather": {
-          "logged": 1645551829997
-        }
+        "id": "_L_EeDReM-57"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "model_name = \"bert-base-arabertv02\"\n",
-        "arabert_prep = ArabertPreprocessor(model_name=model_name)\n",
-        "train_contexts, train_questions, train_answers,train_plausible, train_span_error = Read_AAQAD('Data/AAQAD-train.json', arabert_prep)\n",
-        "val_contexts, val_questions, val_answers,val_plausible, val_span_error = Read_AAQAD('Data/AAQAD-dev.json', arabert_prep)\n",
-        "test_contexts, test_questions, test_answers,test_plausible, test_span_error = Read_AAQAD('Data/AAQAD-test.json',arabert_prep)"
+        "train_contexts, train_questions, train_answers,train_plausible, train_span_error = Read_AAQAD('/content/drive/MyDrive/MRC/aaqad/AAQAD-train.json')\n",
+        "val_contexts, val_questions, val_answers,val_plausible, val_span_error = Read_AAQAD('/content/drive/MyDrive/MRC/aaqad/AAQAD-dev.json')\n",
+        "test_contexts, test_questions, test_answers,test_plausible, test_span_error = Read_AAQAD('/content/drive/MyDrive/MRC/aaqad/AAQAD-test.json')"
       ],
       "outputs": [],
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "id": "Jabv_uE2TdHj",
-        "gather": {
-          "logged": 1645551849189
-        }
+        "id": "Jabv_uE2TdHj"
       }
     },
     {
@@ -300,19 +280,16 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Size of the data set before dropping the misslabeled spans: 17817 & after: 17816\nSize of each split: \n 1-Train: 12629 \n 2-Validation: 1926 \n 3-Test: 3261\npercentage of span's error 5.6126171633832856e-05\nNumber of errors for each split:\n 1-Train: 0 \n 2-Validation: 0\n 3-Test: 1\n"
+          "text": "Size of the data set before dropping the misslabeled spans: 17817 & after: 17753\nSize of each split: \n 1-Train: 12595 \n 2-Validation: 1915 \n 3-Test: 3243\npercentage of span's error 0.0035920749845653028\nNumber of errors for each split:\n 1-Train: 34 \n 2-Validation: 11\n 3-Test: 19\n"
         }
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS7kUgcJZ34r",
-        "outputId": "57226f1f-17ac-481b-bb28-f285b451af3f",
-        "gather": {
-          "logged": 1645551896210
-        }
+        "outputId": "57226f1f-17ac-481b-bb28-f285b451af3f"
       }
     },
     {
@@ -334,7 +311,8 @@
         "\n",
         "train_encodings = arabert_tokenizer(train_questions, train_contexts, truncation=True, padding=True, return_tensors=\"pt\")\n",
         "val_encodings = arabert_tokenizer(val_questions, val_contexts, truncation=True, padding=True, return_tensors=\"pt\")\n",
-        "test_encodings = arabert_tokenizer(test_questions, test_contexts,truncation= True, padding= True, return_tensors=\"pt\")\n"
+        "test_encodings = arabert_tokenizer(test_questions, test_contexts,truncation= True, padding= True, return_tensors=\"pt\")\n",
+        "#model_encodings = arabert_tokenizer(train_questions[:2], train_contexts[:2], truncation=True, padding=True, return_tensors=\"pt\")"
       ],
       "outputs": [
         {
@@ -1035,7 +1013,7 @@
       "cell_type": "code",
       "source": [
         "def train(model, num_epochs, criterion1, criterion2, optimizer,min_val_loss, train_loader, val_loader, log, exp_name):\n",
-        "  curr_ckp_path, best_ckp_path, exp_path = order_exp('Runs/arabert_basev02_WA/train', exp_name)\n",
+        "  curr_ckp_path, best_ckp_path, exp_path = order_exp('/content/drive/MyDrive/MRC/training/arabert_base', exp_name)\n",
         "  model.train()\n",
         "  for epoch in range(num_epochs):\n",
         "    total_loss = 0.0\n",
