Fixing Predection bug

--- a/WorkingDemo.ipynb
+++ b/WorkingDemo.ipynb
@@ -38,7 +38,7 @@
           "output_type": "execute_result",
           "execution_count": 1,
           "data": {
-            "text/plain": "<torch._C.Generator at 0x7f70099c0f90>"
+            "text/plain": "<torch._C.Generator at 0x7fac35034170>"
           },
           "metadata": {}
         }
@@ -55,7 +55,7 @@
           }
         },
         "gather": {
-          "logged": 1650316825969
+          "logged": 1650368389548
         }
       }
     },
@@ -128,7 +128,7 @@
           }
         },
         "gather": {
-          "logged": 1650316883645
+          "logged": 1650368507571
         }
       }
     },
@@ -213,7 +213,8 @@
         "    arabert_prep = ArabertPreprocessor(model_name=model_name)\r\n",
         "    aqad_test_contexts, aqad_test_questions, aqad_test_answers, aqad_test_plausible, aqad_test_ids = Read_AAQAD(\r\n",
         "        'Data/AAQAD-test.json', arabert_prep)\r\n",
-        "    random.seed(3)\r\n",
+        "    random.seed(3407)\r\n",
+        "    #3,3407\r\n",
         "    rand_idx = [random.randint(0, len(aqad_test_contexts)) for _ in range(2)]\r\n",
         "    rand_idx\r\n",
         "\r\n",
@@ -237,7 +238,7 @@
         "#demo_contexts, demo_questions = get_sample()\r\n"
       ],
       "outputs": [],
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -249,7 +250,7 @@
           }
         },
         "gather": {
-          "logged": 1650317275018
+          "logged": 1650368507902
         }
       }
     },
@@ -290,7 +291,7 @@
         "      #print(no_probs.logits.shape)\r\n",
         "    for i in range(curr_batch_size):\r\n",
         "        #print(f\"this is tensor index {i}\")\r\n",
-        "        start_pred, end_pred= torch.argmax(no_probs[i], dim=0), torch.argmax(no_probs[i], dim = 0)\r\n",
+        "        start_pred, end_pred= torch.argmax(outputs.start_logits[i],dim=0), torch.argmax(outputs.end_logits[i],dim =0)\r\n",
         "        #print(start_pred.shape, end_pred.shape)\r\n",
         "        #print(start_pred)\r\n",
         "        #print(start_pred, end_pred)\r\n",
@@ -305,7 +306,7 @@
         "            print(\"---------------------------\")\r\n"
       ],
       "outputs": [],
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -317,7 +318,7 @@
           }
         },
         "gather": {
-          "logged": 1650317275404
+          "logged": 1650368508108
         }
       }
     },
@@ -331,10 +332,10 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Sample 1 \nContext: نقص الزنك له عواقب وخيمة على نمو الأطفال ، بحيث يؤدي إلى نقص في الطول و الإصابة بالتأخر النمو البنيوي ، فقد أظهرت دراسات للتدخلات التي أجريت في عدة بلدان وجود علاقة إيجابية بين توفير جرع الزنك المكملة والنمو الخطي لدى الأطفال . ويسبب نقصه أيضا مرض الإسهال و التهابات الجهاز التنفسي . \nQuestion: لماذا لا ينبغي أن يعطى الزنك بمفرده لأولئك الذين ليس لديهم أوجه قصور ؟ \nIs Impossible to Answer? True\n---------------------------\nSample 2 \nContext: في عام 1045 ، غزت الإمبراطورية البيزنطية أرمينيا . وبعدها بفترة قصيرة تلتها الدويلات الأخرى تحت السيطرة البيزنطية . لم يدم الحكم البيزنطي طويلا ، حيث انتصر السلاجقة في 1071 على البيزنطيين وسيطروا على أرمينيا في معركة ملاذكرد وأقاموا الإمبراطورية السلجوقية . هربا من الموت أو العبودية على يد أولئك الذين اغتالوا غاجيك الثاني ملك آني ، فر أحد أقاربه وهو أرمني يدعى روبن مع بعض أهل القرى إلى المضائق الجبلية في جبال طوروس ومن ثم إلى طرسوس في قيليقية . وفر لهم الحاكم البيزنطي مأوى في قصره حيث تأسست في نهاية المطاف مملكة قيليقية الأرمنية . كانت قيليقية حليفا قويا للصليبيين الأوروبيين واعتبرت نفسها حصنا للمسيحية في الشرق . يشهد أيضا لأهمية قيليقية في التاريخ والدولة الأرمنية نقل مقر الكاثوليكوس للكنيسة الأرمنية الرسولية وهو الزعيم الروحي للشعب الأرمني إلى المنطقة . سرعان ما بدأت الإمبراطورية السلجوقية في الانهيار . وفي أوائل القرن الثاني عشر أنشأ الأمراء الأرمن من الأسرة الزكرية إمارة أرمنية شبه مستقلة في أرمينيا الشمالية والشرقية عرفت باسم أرمينيا الزكرية واستمرت تحت رعاية من السلاجقة والمملكة الجورجية والأتابكة من أذربيجان والإمبراطورية الخوارزمية . تقاسمت عائلة الأوربليين النبيلة الحكم مع الزكريين في أجزاء مختلفة من البلاد ولا سيما في سيونيك وفايوتس دزور . \nQuestion: متى تغلب الأتراك السلاجقة على البيزنطيين ؟ \nIs Impossible to Answer? False\n---------------------------\nSample 1 Prediction: \nAnswer: Can not be answered with Confidence: 0.5032625794410706\n---------------------------\nSample 2 Prediction: \nAnswer: Can not be answered with Confidence: 0.5070127844810486\n---------------------------\n"
+          "text": "Sample 1 \nContext: لانكشير برزت خلال الثورة الصناعية كمنطقة تجارية وصناعية . المقاطعة بها عدة مئات من المطاحن ومناجم الفحم . منذ 1830 ، تمت معالجة حوالي 85 ٪ من جميع القطن في جميع أنحاء العالم في لانكشير . اكرينجتون ، بلاكبيرن ، تشورلي ، داروين ، بيرنلي هم البلدات الرئيسية في حلج القطن خلال تلك الفترة . بلاكبول كانت مركزا رئيسيا للسياحة . \nQuestion: ما هي النسبة المئوية من القطن تم طحنها في أولدهام ؟ \nIs Impossible to Answer? True\n---------------------------\nSample 2 \nContext: ويعتقد أن ثلث سكان العالم قد أصيبوا بعدوى لمتفطرة السلية ، مع حدوث الإصابات الجديدة بمعدل إصابة حوالي واحدة في الثانية تقريبا وفي عام 2007 ، قدر عدد الحالات المزمنة النشطة عالميا بحوالي 13 , 7 مليون إصابة ، في حين قدر عدد الإصابات بحوالي 8 , 8 ملايين إصابة جديدة عام 2010 ، و 1 . 5 مليون حالة وفاة مرتبطة بالإصابة ، والتي حدث معظمها في الدول النامية ومنذ عام 2006 بدأ العدد المطلق لحالات السل بالانخفاض ، وتناقص عدد الإصابات الجديدة منذ عام 2000 . إن توزع إصابات السل ليس متماثلا في جميع أنحاء العالم ؛ فحوالي 80 ٪ من السكان في العديد من البلدان الآسيوية والأفريقية إيجابي اختبار السلين ، في حين فقط تظهر إيجابية هذا الاختبار لدى 5 - 10 ٪ فقط من سكان الولايات المتحدة يصاب عدد أكبر من الأفراد في العالم النامي بالسل العقد بسبب المناعة المنقوصة ويرجع ذلك بشكل كبير إلى نسبة المعدلات المرتفعة للإصابة بعدوى فيروس نقص المناعة البشرية وما يتبعها من تطور الإصابة بمرض متلازمة نقص المناعة المكتسبة الإيدز . \nQuestion: هل تحدث غالبية الوفيات الناجمة عن السل في البلدان النامية أو الدول الصناعية ؟ \nIs Impossible to Answer? False\n---------------------------\nSample 1 Prediction \nAnswer: ، تمت معالجة حوالي 85 ٪ من جميع القطن في جميع أنحاء العالم في لانكشير. اكرينجتون ، بلاكبيرن ، تشورلي ، داروين ، بيرنلي هم البلدات الرئيسية في حلج القطن خلال تلك الفترة. بلاكبول كانت مركزا رئيسيا للسياحة. ما هي النسبة المئوية من القطن تم طحنها في أولدهام with Confidence: 0.46995091438293457 with Start: 25 and End: 87\n---------------------------\nSample 2 Prediction: \nAnswer: Can not be answered with Confidence: 0.5092730522155762\n---------------------------\n"
         }
       ],
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -346,7 +347,7 @@
           }
         },
         "gather": {
-          "logged": 1650317284578
+          "logged": 1650368516679
         }
       }
     },
