changing printing format

--- a/WorkingDemo.ipynb
+++ b/WorkingDemo.ipynb
@@ -38,7 +38,7 @@
           "output_type": "execute_result",
           "execution_count": 1,
           "data": {
-            "text/plain": "<torch._C.Generator at 0x7fac35034170>"
+            "text/plain": "<torch._C.Generator at 0x7fa901ca4230>"
           },
           "metadata": {}
         }
@@ -55,7 +55,7 @@
           }
         },
         "gather": {
-          "logged": 1650368389548
+          "logged": 1650538767451
         }
       }
     },
@@ -128,7 +128,7 @@
           }
         },
         "gather": {
-          "logged": 1650368507571
+          "logged": 1650538838827
         }
       }
     },
@@ -213,8 +213,8 @@
         "    arabert_prep = ArabertPreprocessor(model_name=model_name)\r\n",
         "    aqad_test_contexts, aqad_test_questions, aqad_test_answers, aqad_test_plausible, aqad_test_ids = Read_AAQAD(\r\n",
         "        'Data/AAQAD-test.json', arabert_prep)\r\n",
-        "    random.seed(3407)\r\n",
-        "    #3,3407\r\n",
+        "    random.seed(9)\r\n",
+        "    #3,3407, 10\r\n",
         "    rand_idx = [random.randint(0, len(aqad_test_contexts)) for _ in range(2)]\r\n",
         "    rand_idx\r\n",
         "\r\n",
@@ -223,9 +223,6 @@
         "    def get_info(rand_idx):\r\n",
         "        contexts, questions, answers, plausible, IDs = [], [], [], [], []\r\n",
         "        for i, idx in enumerate(rand_idx):\r\n",
-        "            print(\r\n",
-        "                f'Sample {i + 1} \\nContext: {aqad_test_contexts[idx]} \\nQuestion: {aqad_test_questions[idx]} \\nIs Impossible to Answer? {aqad_test_plausible[idx]}')\r\n",
-        "            print(\"---------------------------\")\r\n",
         "            contexts.append(aqad_test_contexts[idx])\r\n",
         "            questions.append(aqad_test_questions[idx])\r\n",
         "            answers.append(aqad_test_answers[idx])\r\n",
@@ -234,7 +231,7 @@
         "        return contexts, questions, answers, plausible, IDs\r\n",
         "\r\n",
         "    demo_contexts, demo_questions, demo_answers, demo_plausible, demo_IDs = get_info(rand_idx)\r\n",
-        "    return demo_contexts, demo_questions \r\n",
+        "    return demo_contexts, demo_questions, demo_plausible\r\n",
         "#demo_contexts, demo_questions = get_sample()\r\n"
       ],
       "outputs": [],
@@ -250,7 +247,7 @@
           }
         },
         "gather": {
-          "logged": 1650368507902
+          "logged": 1650538856943
         }
       }
     },
@@ -270,7 +267,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_predictions(demo_contexts, demo_questions, cls_model, span_model):\r\n",
+        "def get_predictions(demo_contexts, demo_questions,demo_plausible, cls_model, span_model):\r\n",
         "    #Creating the tokenizer\r\n",
         "    model_name = model_name = \"aubmindlab/araelectra-base-discriminator\"\r\n",
         "    araelectra_tokenizer = AutoTokenizer.from_pretrained(model_name,do_lower_case=False)\r\n",
@@ -291,6 +288,8 @@
         "      #print(no_probs.logits.shape)\r\n",
         "    for i in range(curr_batch_size):\r\n",
         "        #print(f\"this is tensor index {i}\")\r\n",
+        "        print(f'Sample {i + 1} \\n\\nQuestion: {demo_questions[i]} \\n\\nContext: {demo_contexts[i]} \\n\\nIs Impossible to Answer? {demo_plausible[i]}')\r\n",
+        "        #print(\"---------------------------\")\r\n",
         "        start_pred, end_pred= torch.argmax(outputs.start_logits[i],dim=0), torch.argmax(outputs.end_logits[i],dim =0)\r\n",
         "        #print(start_pred.shape, end_pred.shape)\r\n",
         "        #print(start_pred)\r\n",
@@ -298,11 +297,11 @@
         "        text_prediction = araelectra_tokenizer.decode(tokens[i][start_pred.item():end_pred.item()], skip_special_tokens=True, clean_up_tokenization_spaces=True)\r\n",
         "        probs_prediction = no_probs[i][1].item()\r\n",
         "        if probs_prediction>=0.5:\r\n",
-        "            print(f'Sample {i+1} Prediction: \\nAnswer: Can not be answered with Confidence: {probs_prediction}')\r\n",
+        "            print(f'Sample {i+1} Prediction: \\n\\nAnswer: Can not be answered \\n\\nConfidence: {probs_prediction}')\r\n",
         "            print(\"---------------------------\")\r\n",
         "\r\n",
         "        else:\r\n",
-        "            print(f'Sample {i+1} Prediction \\nAnswer: {text_prediction} with Confidence: {probs_prediction} with Start: {start_pred.item()} and End: {end_pred.item()}')\r\n",
+        "            print(f'Sample {i+1} Prediction \\n\\nAnswer: {text_prediction} \\n\\nConfidence: {probs_prediction} \\n\\nwith Start: {start_pred.item()} and End: {end_pred.item()}')\r\n",
         "            print(\"---------------------------\")\r\n"
       ],
       "outputs": [],
@@ -318,24 +317,24 @@
           }
         },
         "gather": {
-          "logged": 1650368508108
+          "logged": 1650538859332
         }
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "demo_contexts, demo_questions = get_sample()\r\n",
-        "get_predictions(demo_contexts, demo_questions, cls_model, span_model)"
+        "demo_contexts, demo_questions, demo_plausible = get_sample()\r\n",
+        "get_predictions(demo_contexts, demo_questions, demo_plausible, cls_model, span_model)"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Sample 1 \nContext: لانكشير برزت خلال الثورة الصناعية كمنطقة تجارية وصناعية . المقاطعة بها عدة مئات من المطاحن ومناجم الفحم . منذ 1830 ، تمت معالجة حوالي 85 ٪ من جميع القطن في جميع أنحاء العالم في لانكشير . اكرينجتون ، بلاكبيرن ، تشورلي ، داروين ، بيرنلي هم البلدات الرئيسية في حلج القطن خلال تلك الفترة . بلاكبول كانت مركزا رئيسيا للسياحة . \nQuestion: ما هي النسبة المئوية من القطن تم طحنها في أولدهام ؟ \nIs Impossible to Answer? True\n---------------------------\nSample 2 \nContext: ويعتقد أن ثلث سكان العالم قد أصيبوا بعدوى لمتفطرة السلية ، مع حدوث الإصابات الجديدة بمعدل إصابة حوالي واحدة في الثانية تقريبا وفي عام 2007 ، قدر عدد الحالات المزمنة النشطة عالميا بحوالي 13 , 7 مليون إصابة ، في حين قدر عدد الإصابات بحوالي 8 , 8 ملايين إصابة جديدة عام 2010 ، و 1 . 5 مليون حالة وفاة مرتبطة بالإصابة ، والتي حدث معظمها في الدول النامية ومنذ عام 2006 بدأ العدد المطلق لحالات السل بالانخفاض ، وتناقص عدد الإصابات الجديدة منذ عام 2000 . إن توزع إصابات السل ليس متماثلا في جميع أنحاء العالم ؛ فحوالي 80 ٪ من السكان في العديد من البلدان الآسيوية والأفريقية إيجابي اختبار السلين ، في حين فقط تظهر إيجابية هذا الاختبار لدى 5 - 10 ٪ فقط من سكان الولايات المتحدة يصاب عدد أكبر من الأفراد في العالم النامي بالسل العقد بسبب المناعة المنقوصة ويرجع ذلك بشكل كبير إلى نسبة المعدلات المرتفعة للإصابة بعدوى فيروس نقص المناعة البشرية وما يتبعها من تطور الإصابة بمرض متلازمة نقص المناعة المكتسبة الإيدز . \nQuestion: هل تحدث غالبية الوفيات الناجمة عن السل في البلدان النامية أو الدول الصناعية ؟ \nIs Impossible to Answer? False\n---------------------------\nSample 1 Prediction \nAnswer: ، تمت معالجة حوالي 85 ٪ من جميع القطن في جميع أنحاء العالم في لانكشير. اكرينجتون ، بلاكبيرن ، تشورلي ، داروين ، بيرنلي هم البلدات الرئيسية في حلج القطن خلال تلك الفترة. بلاكبول كانت مركزا رئيسيا للسياحة. ما هي النسبة المئوية من القطن تم طحنها في أولدهام with Confidence: 0.46995091438293457 with Start: 25 and End: 87\n---------------------------\nSample 2 Prediction: \nAnswer: Can not be answered with Confidence: 0.5092730522155762\n---------------------------\n"
+          "text": "Sample 1 \n\nQuestion: ما هي منظمة الصحة البريطانية التي جعلت من مرض السل الأولوية الأولى في بدايتها ؟ \n\nContext: في أوروبا ، بدأت معدلات السل في الارتفاع في أوائل القرن السابع عشر لتصل إلى أوجها في القرن التاسع عشر ، عندما سببت ما يقارب من 25 ٪ من مجموع الوفيات ثم تراجعت نسبة الوفيات بحوالي 90 % في منتصف القرن العشرين ( الخمسينات منه ) . بدأ التحسن في الشؤون الصحية العامة بإنقاص معدل الإصابة بالسل بشكل ملموس حتى قبل وصول الستربتوميسين وغيره من المضادات الحيوية ، على الرغم من أن المرض كان لا يزال يشكل خطرا كبيرا على الصحة العامة بحيث أنه عندما تم تشكيل مجلس البحوث الطبية في بريطانيا في عام 1913 ، كان تركيزه الأساسي منصبا على بحوث السل \n\nIs Impossible to Answer? False\nSample 1 Prediction: \n\nAnswer: Can not be answered \n\nConfidence: 0.5069583058357239\n---------------------------\nSample 2 \n\nQuestion: من الذي أسس كلية الطب الأرمينية في سيليانيا أرمينيا ؟ \n\nContext: على أساس توسيع وتطوير جامعة يريفان الحكومية ، تم تشكيل عدد من مؤسسات التعليم العالي المستقلة بما في ذلك المعهد الطبي في عام 1930 والذي شكل الأساس لكلية الطب . منحت كلية الطب الحكومية في 1980 إحدى الجوائز الرئيسية للاتحاد السوفياتي السابق وهو وسام الراية الحمراء للعمل لتدريب المتخصصين المؤهلين في مجال الرعاية الصحية والخدمات الجليلة في تطوير العلوم الطبية . في عام 1989 تمت تسمية الكلية تيمنا بمخيتار هيراتسي وهو من الأطباء المشاهير في العصور الوسطى . كان مخيتار هيراتسي مؤسس المدرسة الطبية الأرمنية في قيليقية الأرمنية . لعب هيراتسي نفس الدور في العلوم الطبية الذي لعبه أبقراط في أوروبا الغربية وجالينوس في الإمبراطورية الرومانية وابن سينا في الطب العربي . \n\nIs Impossible to Answer? False\nSample 2 Prediction: \n\nAnswer: Can not be answered \n\nConfidence: 0.5072276592254639\n---------------------------\n"
         }
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -347,7 +346,7 @@
           }
         },
         "gather": {
-          "logged": 1650368516679
+          "logged": 1650540411989
         }
       }
     },
