--- a/AraElectraDecoupling-ASQuADv2.ipynb
+++ b/AraElectraDecoupling-ASQuADv2.ipynb
@@ -1636,7 +1636,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!/anaconda/envs/azureml_py38/bin/python3 evaluatev2.py Data/asquadv2-val.json Runs/AraElectraDecoupledAsquadv2/train/span/third/preds/preds.json electra --na-prob-file Runs/AraElectraDecoupledAsquadv2/train/span/second/preds/na_probs.json  --na-prob-thresh 0.5 "
+        "!/anaconda/envs/azureml_py38/bin/python3 evaluatev2.py Data/asquadv2-val.json Runs/AraElectraDecoupledAsquadv2/train/span/third/preds/preds.json electra --na-prob-file Runs/AraElectraDecoupledAsquadv2/train/span/second/preds/na_probs.json  --na-prob-thresh 0.5 --out-file Runs/AraElectraDecoupledAsquadv2/train/span/third"
       ],
       "outputs": [
         {
@@ -1645,7 +1645,24 @@
           "text": "{\r\n  \"exact\": 63.87298282144716,\r\n  \"f1\": 70.44332708661499,\r\n  \"total\": 9605,\r\n  \"HasAns_exact\": 53.6441484300666,\r\n  \"HasAns_f1\": 65.65331240093887,\r\n  \"HasAns_total\": 5255,\r\n  \"NoAns_exact\": 76.22988505747126,\r\n  \"NoAns_f1\": 76.22988505747126,\r\n  \"NoAns_total\": 4350,\r\n  \"best_exact\": 66.66319625195212,\r\n  \"best_exact_thresh\": 0.08445756882429123,\r\n  \"best_f1\": 72.30824856366091,\r\n  \"best_f1_thresh\": 0.15894971787929535\r\n}\r\n"
         }
       ],
-      "execution_count": 50,
+      "execution_count": 1,
+      "metadata": {
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [],
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
